// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ListResultsCard renders correctly when batch job fails 1`] = `
<Panel
  accent="gray"
  sectioned={true}
  title={
    <div
      className="PanelHeader"
    >
      Last Validation:
    </div>
  }
>
  <div
    className="TableContainer"
  >
    <Table>
      <tbody>
        <Table.Row
          className="TableHeader"
        >
          <Table.HeaderCell
            className="TableCell"
            width="25%"
          >
            Date Uploaded:
          </Table.HeaderCell>
          <Table.HeaderCell
            className="TableCell"
            width="25%"
          >
            Status:
          </Table.HeaderCell>
        </Table.Row>
        <Table.Row>
          <Table.Cell
            className="TableCell"
          >
            Nov 1 2018, 1:16pm
          </Table.Cell>
          <Table.Cell
            className="TableCell"
          >
            <Tag>
              <Icon />
               
              Failed. Please try again.
            </Tag>
          </Table.Cell>
          <Table.Cell
            className="TableCell"
          />
        </Table.Row>
      </tbody>
    </Table>
  </div>
</Panel>
`;

exports[`ListResultsCard renders correctly when complete 1`] = `
<Panel
  accent="gray"
  sectioned={true}
  title={
    <div
      className="PanelHeader"
    >
      Last Validation:
    </div>
  }
>
  <div
    className="TableContainer"
  >
    <Table>
      <tbody>
        <Table.Row
          className="TableHeader"
        >
          <Table.HeaderCell
            className="TableCell"
            width="25%"
          >
            Date Uploaded:
          </Table.HeaderCell>
          <Table.HeaderCell
            className="TableCell"
            width="25%"
          >
            Status:
          </Table.HeaderCell>
        </Table.Row>
        <Table.Row>
          <Table.Cell
            className="TableCell"
          >
            Nov 1 2018, 1:16pm
          </Table.Cell>
          <Table.Cell
            className="TableCell"
          >
            <Tag>
              <Icon />
               
              Completed
            </Tag>
          </Table.Cell>
          <Table.Cell
            className="TableCell"
          >
            <div
              className="DownloadButton"
            >
              <DownloadLink
                component={[Function]}
                size="large"
                to="testfile.csv"
              >
                Download Results 
                <FileDownload />
              </DownloadLink>
            </div>
          </Table.Cell>
        </Table.Row>
      </tbody>
    </Table>
  </div>
</Panel>
`;

exports[`ListResultsCard renders correctly when loading and status is unknown 1`] = `
<Panel>
  <div
    className="LoadingWrapper"
  >
    <LoadingSVG
      size="Small"
    />
  </div>
</Panel>
`;

exports[`ListResultsCard renders correctly when not complete 1`] = `
<Panel
  accent="gray"
  sectioned={true}
  title={
    <div
      className="PanelHeader"
    >
      Last Validation:
    </div>
  }
>
  <div
    className="TableContainer"
  >
    <Table>
      <tbody>
        <Table.Row
          className="TableHeader"
        >
          <Table.HeaderCell
            className="TableCell"
            width="25%"
          >
            Date Uploaded:
          </Table.HeaderCell>
          <Table.HeaderCell
            className="TableCell"
            width="25%"
          >
            Status:
          </Table.HeaderCell>
        </Table.Row>
        <Table.Row>
          <Table.Cell
            className="TableCell"
          >
            Nov 1 2018, 1:16pm
          </Table.Cell>
          <Table.Cell
            className="TableCell"
          >
            <Tag>
              <Icon />
               
              Processing
            </Tag>
          </Table.Cell>
          <Table.Cell
            className="TableCell"
          />
        </Table.Row>
      </tbody>
    </Table>
  </div>
</Panel>
`;
